A checkpoint of work in progress wrt. spec. rewrite/organise ...

--- a/docs/implementation.tex
+++ b/docs/implementation.tex
@@ -2,7 +2,9 @@
 
 \usepackage{shared} \addbibresource{shared.bib}
 
-\title{RISC-V \ISE ISE \\ Reference Implementation}
+\title{RISC-V \XCID ISE \\ Reference Implementation}
+\author{\input{shared-authors.tex}}
+\date{Version $\input{shared-version.tex}$ (\today)}
 
 \begin{document}
 
