--- a/docs/shared.bib
+++ b/docs/shared.bib
@@ -1,3 +1,64 @@
+% =============================================================================
+
+@inproceedings{SCARV:LaiMas:90,
+  author       = {X. Lai and J.L. Massey},
+  title        = {A Proposal for a New Block Encryption Standard}, 
+  booktitle    = {Advances in Cryptology (EUROCRYPT)},
+  publisher    = {Springer-Verlag},
+  series       = {LNCS 473},
+  pages        = {389--404},
+  year         = {1990}
+}
+
+@inproceedings{SCARV:KasSch:09,
+  author       = {E. K\"{a}sper and P. Schwabe},
+  title        = {Faster and Timing-attack Resistant {AES-GCM}},
+  booktitle    = {Cryptographic Hardware and Embedded Systems (CHES)},
+  publisher    = {Springer-Verlag LNCS 5747}, 
+  pages        = {1--17}, 
+  year         = {2009}
+}
+
+@inproceedings{SCARV:GGHJPTW:11,
+  author       = {P. Grabher and J. Gro{\ss}sch\"{a}dl and S. Hoerder and K. J\"{a}rvinen and D. Page and S. Tillich and M. W\'{o}jcik},
+  title        = {An exploration of mechanisms for dynamic cryptographic instruction set extension},
+  booktitle    = {Cryptographic Hardware and Embedded Systems (CHES)}, 
+  publisher    = {Springer-Verlag},
+  series       = {LNCS 6917}, 
+  pages        = {1--16}, 
+  year         = {2011}
+}
+
+@inproceedings{SCARV:GraGroPag:08,
+  author       = {P. Grabher and J. Gro{\ss}sch\"{a}dl and D. Page},
+  title        = {Light-weight instruction set extensions for bit-sliced cryptography},
+  booktitle    = {Cryptographic Hardware and Embedded Systems (CHES)},
+  publisher    = {Springer-Verlag},
+  series       = {LNCS 5154}, 
+  pages        = {331--345}, 
+  year         = {2008}
+}
+
+@inproceedings{SCARV:TilGro:06,
+  author       = {S. Tillich and J. Gro{\ss}sch\"{a}dl},
+  title        = {Instruction Set Extensions for Efficient {AES} Implementation on {32-bit} Processors},
+  booktitle    = {Cryptographic Hardware and Embedded Systems (CHES)},
+  publisher    = {Springer-Verlag},
+  series       = {LNCS 4249},
+  pages        = {270--284},
+  year         = {2006}
+}
+
+@inproceedings{SCARV:MTRGS:99,
+  author       = {E. Mosanya and C. Teuscher and H. Restrepo and P. Galley and E. Sanchez}, 
+  title        = {{CryptoBooster}: A Reconfigurable and Modular Cryptographic Coprocessor},
+  booktitle    = {Cryptographic Hardware and Embedded Systems (CHES)},
+  publisher    = {Springer-Verlag},
+  series       = {LNCS 1717},
+  pages        = {246--256},
+  year         = {1999}
+}
+
 @inproceedings{SCARV:BihAndKnu:98,
   author       = {E. Biham and R. Anderson and L. Knudsen},
   title        = {{Serpent}: A New Block Cipher Proposal},
@@ -29,27 +90,6 @@
   year         = {2009}
 }
 
-@inproceedings{SCARV:GraGroPag:08,
-  author       = {P. Grabher and J. Gro{\ss}sch\"{a}dl and D. Page},
-  title        = {Light-weight instruction set extensions for bit-sliced cryptography},
-  booktitle    = {Cryptographic Hardware and Embedded Systems (CHES)},
-  publisher    = {Springer-Verlag},
-  series       = {LNCS 5154}, 
-  pages        = {331--345}, 
-  year         = {2008}
-}
-
-@article{SCARV:GYCH:18,
-  author       = {Q. Ge and Y. Yarom and D. Cock and G. Heiser},
-  title        = {A Survey of Microarchitectural Timing Attacks and Countermeasures on Contemporary Hardware},
-  journal      = {Journal of Cryptographic Engineering (JCEN)},
-  publisher    = {Springer-Verlag},
-  volume       = {8},
-  issue        = {1},
-  pages        = {1--27},
-  year         = {2018}
-}
-
 @inproceedings{SCARV:GeYarHei:18,
   author       = {Q. Ge and Y. Yarom and G. Heiser},
   title        = {No security without time protection: we need a new hardware-software contract},
@@ -65,16 +105,6 @@
   series       = {LNCS 2846},
   pages        = {418--434},
   year         = {2003}
-}
-
-@inproceedings{SCARV:TilGro:06,
-  author       = {S. Tillich and J. Gro{\ss}sch\"{a}dl},
-  title        = {Instruction Set Extensions for Efficient {AES} Implementation on {32-bit} Processors},
-  publisher    = {Springer-Verlag},
-  issue        = {LNCS 4249},
-  booktitle    = {Cryptographic Hardware and Embedded Systems (CHES)},
-  pages        = {270--284},
-  year         = {2006}
 }
 
 @inproceedings{SCARV:GroKam:04,
@@ -95,6 +125,82 @@
   year         = {2008}
 }
 
+@inproceedings{SCARV:RKLMR:03,
+  author       = {S. Ravi and P.C. Kocher and R.B. Lee and G. McGraw and A. Raghunathan},
+  title        = {Security as a new dimension in embedded system design},
+  booktitle    = {Design Automation Conference (DAC)},
+  pages        = {753--760},
+  year         = {2004}
+}
+
+@inproceedings{SCARV:BurMutTiw:16,
+  author       = {W. Burleson and O. Mutlu and M. Tiwari},
+  title        = {Who is the major threat to tomorrow's security?  You, the hardware designer},
+  booktitle    = {Design Automation Conference (DAC)},
+  pages        = {145:1--145:5},
+  year         = {2016}
+}
+
+@inproceedings{SCARV:WuWeaAus:01,
+  author       = {L. Wu and C. Weaver and T. Austin},
+  title        = {{CryptoManiac}: A Fast Flexible Architecture for Secure Communication},
+  booktitle    = {International Symposium on Computer Architecture (ISCA)},
+  pages        = {110--119},
+  year         = {2001}
+} 
+
+@inproceedings{SCARV:Gutmann:00,
+  author       = {P. Gutmann},
+  title        = {An Open-source Cryptographic Coprocessor},
+  booktitle    = {USENIX Security Symposium},
+  pages        = {8:1--8:16},
+  year         = {2000}
+}
+
+@inproceedings{SCARV:FazLopOli:18,
+  author       = {A. Faz-Hernandez and J. L\'{o}pez and A.K.D.S. de Oliveira},
+  title        = {{SoK}: A Performance Evaluation of Cryptographic Instruction Sets on Modern Architectures},
+  booktitle    = {ASIA Public-Key Cryptography Workshop (APKC)},
+  pages        = {9--18},
+  year         = {2018}
+} 
+
+@inproceedings{SCARV:RegIen:16,
+  author       = {F. Regazzoni and P. Ienne},
+  title        = {Instruction Set Extensions for Secure Applications},
+  booktitle    = {Design, Automation, and Test in Europe (DATE)},
+  pages        = {1529--1534},
+  year         = {2016}
+}
+
+@inproceedings{SCARV:LSYRR:04,
+  author       = {R.B. Lee and Z. Shi and Y.L. Yin and R.L. Rivest and M.J.B. Robshaw},
+  title        = {On Permutation Operations in Cipher Design},
+  booktitle    = {International Conference on Information Technology: Coding and Computing (ITCC)},
+  pages        = {569--577},
+  year         = {2004}
+}
+
+@inproceedings{SCARV:TilKirSze:10,
+  author       = {S. Tillich and M. Kirschbaum and A. Szekely},
+  title        = {{SCA}-resistant Embedded Processors: The Next Generation},
+  booktitle    = {Annual Computer Security Applications Conference (ACSAC)},
+  pages        = {211--220},
+  year         = {2010}
+} 
+
+% =============================================================================
+
+@article{SCARV:LeeShiYan:01,
+  author       = {R.B. Lee and Z. Shi and X. Yang},
+  title        = {Cryptography Efficient Permutation Instructions for Fast Software},
+  journal      = {IEEE Micro},
+  volume       = {21},
+  number       = {6},
+  pages        = {56--69},
+  year         = {2001}
+}
+
 @article{SCARV:LeeFis:05,
   author       = {R.B. Lee and A.M. Fiskiran},
   title        = {{PLX}: An Instruction Set Architecture and Testbed for Multimedia Information Processing},
@@ -103,38 +209,6 @@
   number       = {1},
   pages        = {85--108},
   year         = {2005}
-}
-
-@techreport{SCARV:SiFive:rocketE31,
-  author       = {SiFive Inc.},
-  title        = {{E31} Core Complex Manual},
-  number       = {v2p0},
-  year         = {2018},
-  url          = {http://www.sifive.com/documentation/risc-v-core/e31-risc-v-core-ip-manual},
-}
-
-@techreport{SCARV:XS1:09,
-  author       = {D. May},
-  title        = {The XMOS XS1 Architecture},
-  institution  = {XMOS Ltd.},
-  year         = {2009},
-  url          = {http://www.xmos.com/published/xmos-xs1-architecture}
-}
-
-@techreport{SCARV:RV:ISA:I:17,
-  editor       = {A. Waterman and K. Asanovi\'{c}},
-  title        = {The {RISC-V} Instruction Set Manual},
-  number       = {Volume  I: User-Level ISA (Version 2.2)},
-  year         = {2017},
-  url          = {http://riscv.org/specifications/}
-}
-
-@techreport{SCARV:RV:ISA:II:17,
-  editor       = {A. Waterman and K. Asanovi\'{c}},
-  title        = {The {RISC-V} Instruction Set Manual},
-  number       = {Volume II: Privileged Architecture (Version 1.10)},
-  year         = {2017},
-  url          = {http://riscv.org/specifications/}
 }
 
 @article{SCARV:StePre:18,
@@ -156,56 +230,39 @@
   year         = {2016}
 }
 
-@inproceedings{SCARV:RKLMR:03,
-  author    = {S. Ravi and P.C. Kocher and R.B. Lee and G. McGraw and A. Raghunathan},
-  title     = {Security as a new dimension in embedded system design},
-  booktitle = {Design Automation Conference (DAC)},
-  pages     = {753--760},
-  year      = {2004}
-}
-
 @article{SCARV:RRKH:04,
-  author    = {S. Ravi and A. Raghunathan and P.C. Kocher and S. Hattangady},
-  title     = {Security in embedded systems: Design challenges},
-  journal   = {ACM Transactions on Embedded Computer Systems},
-  volume    = {3},
-  number    = {3},
-  pages     = {461--491},
-  year      = {2004}
+  author       = {S. Ravi and A. Raghunathan and P.C. Kocher and S. Hattangady},
+  title        = {Security in embedded systems: Design challenges},
+  journal      = {ACM Transactions on Embedded Computer Systems},
+  volume       = {3},
+  number       = {3},
+  pages        = {461--491},
+  year         = {2004}
 }
 
-@inproceedings{SCARV:BurMutTiw:16,
-  author    = {W. Burleson and O. Mutlu and M. Tiwari},
-  title     = {Who is the major threat to tomorrow's security?  You, the hardware designer},
-  booktitle = {DAC},
-  year      = {2016}
+@article{SCARV:GYCH:18,
+  author       = {Q. Ge and Y. Yarom and D. Cock and G. Heiser},
+  title        = {A Survey of Microarchitectural Timing Attacks and Countermeasures on Contemporary Hardware},
+  journal      = {Journal of Cryptographic Engineering (JCEN)},
+  publisher    = {Springer-Verlag},
+  volume       = {8},
+  issue        = {1},
+  pages        = {1--27},
+  year         = {2018}
+}
+
+@article{SCARV:MayMur:16,
+  author       = {M. Mayhew and R. Muresan},
+  title        = {An overview of hardware-level statistical power analysis attack countermeasures},
+  journal      = {Journal of Cryptographic Engineering (JCEN)},
+  publisher    = {Springer-Verlag},
+  volume       = {7},
+  issue        = {3},
+  pages        = {213--244},
+  year         = {2017}
 }
 
 % =============================================================================
-
-@inproceedings{SCARV:Gutmann:00,
-  author      = {P. Gutmann},
-  title       = {An Open-source Cryptographic Coprocessor},
-  booktitle   = {USENIX Security Symposium},
-  pages       = {8:1--8:16},
-  year        = {2000}
-}
-
-@inproceedings{SCARV:FazLopOli:18,
-  author      = {A. Faz-Hernandez and J. L\'{o}pez and A.K.D.S. de Oliveira},
-  title       = {{SoK}: A Performance Evaluation of Cryptographic Instruction Sets on Modern Architectures},
-  booktitle   = {ASIA Public-Key Cryptography Workshop (APKC)},
-  pages       = {9--18},
-  year        = {2018}
-} 
-
-@inproceedings{SCARV:RegIen:16,
-  author       = {F. Regazzoni and P. Ienne},
-  title        = {Instruction Set Extensions for Secure Applications},
-  booktitle    = {DATE},
-  pages        = {1529--1534},
-  year         = {2016}
-}
 
 @incollection{SCARV:BarGioMar:09,
   author       = {S. Bartolini and R. Giorgi and E. Martinelli},
@@ -216,6 +273,199 @@
   booktitle    = {Cryptographic Engineering},
   publisher    = {Springer},
   year         = {2009}
+}
+
+% =============================================================================
+
+@book{book:aes,
+  author       = {J. Daemen and V. Rijmen},
+  title        = {The Design of Rijndael},
+  publisher    = {Springer}, 
+  year         = {2002}
+}
+
+% =============================================================================
+
+@misc{SCARV:NIST:SP:800_90a,
+  title        = {Recommendation for Random Number Generation Using Deterministic Random Bit Generators},
+  howpublished = {National Institute of Standards and Technology (NIST)             Special Publication 800-90A},
+  year         = {2012},
+  url          = {http://csrc.nist.gov}
+}
+
+@misc{SCARV:NIST:SP:800_90b,
+  title        = {Entropy Sources},
+  howpublished = {National Institute of Standards and Technology (NIST)             Special Publication 800-90B},
+  year         = {2012},
+  url          = {http://csrc.nist.gov}
+}
+
+@misc{SCARV:NIST:SP:800_90c,
+  title        = {Recommendation for Random Bit Generator ({RBG}) Constructions},
+  howpublished = {National Institute of Standards and Technology (NIST)             Special Publication 800-90C},
+  year         = {2012},
+  url          = {http://csrc.nist.gov}
+}
+
+% -----------------------------------------------------------------------------
+
+@misc{SCARV:FIPS:46_3,
+  title        = {{D}ata {E}ncryption {S}tandard ({DES})},
+  howpublished = {National Institute of Standards and Technology (NIST) Federal Information Processing Standard (FIPS) 46-3},
+  year         = {1999},
+  url          = {http://csrc.nist.gov}
+}
+
+@misc{SCARV:FIPS:197,
+  title        = {{A}dvanced {E}ncryption {S}tandard ({AES})},
+  howpublished = {National Institute of Standards and Technology (NIST) Federal Information Processing Standard (FIPS) 197},
+  year         = {2001},
+  url          = {http://csrc.nist.gov}
+}
+
+% =============================================================================
+
+@misc{SCARV:RRSY:98,
+  author       = {R.L. Rivest and M.J.B. Robshaw and R. Sidney and Y.L. Yin},
+  title        = {The {RC6} Block Cipher},
+  year         = {1998},
+  url          = {http://people.csail.mit.edu/rivest/pubs/RRSY98.pdf}
+}
+
+% =============================================================================
+
+@techreport{SCARV:XS1:09,
+  author       = {D. May},
+  title        = {The XMOS XS1 Architecture},
+  institution  = {XMOS Ltd.},
+  year         = {2009},
+  url          = {http://www.xmos.com/published/xmos-xs1-architecture}
+}
+
+% -----------------------------------------------------------------------------
+
+@techreport{SCARV:SiFive:rocketE31,
+  author       = {SiFive Inc.},
+  title        = {{E31} Core Complex Manual},
+  number       = {v2p0},
+  year         = {2018},
+  url          = {http://www.sifive.com/documentation/risc-v-core/e31-risc-v-core-ip-manual},
+}
+
+@techreport{SCARV:RV:ISA:I:17,
+  editor       = {A. Waterman and K. Asanovi\'{c}},
+  title        = {The {RISC-V} Instruction Set Manual},
+  number       = {Volume  I: User-Level ISA (Version 2.2)},
+  year         = {2017},
+  url          = {http://riscv.org/specifications/}
+}
+
+@techreport{SCARV:RV:ISA:II:17,
+  editor       = {A. Waterman and K. Asanovi\'{c}},
+  title        = {The {RISC-V} Instruction Set Manual},
+  number       = {Volume II: Privileged Architecture (Version 1.10)},
+  year         = {2017},
+  url          = {http://riscv.org/specifications/}
+}
+
+% -----------------------------------------------------------------------------
+
+@techreport{SCARV:ARMv5:05,
+  title        = {{ARMv5}    {A}rchitecture {R}eference {M}anual},
+  number       = {DDI-0100I},
+  institution  = {ARM Ltd.},
+  year         = {2005},
+  url          = {http://infocenter.arm.com/help/topic/com.arm.doc.ddi0100i/index.html}
+}
+
+@techreport{SCARV:ARMv6_M:17,
+  title        = {{ARMv6-M}  {A}rchitecture {R}eference {M}anual},
+  number       = {DDI-0419D},
+  institution  = {ARM Ltd.},
+  year         = {2017},
+  url          = {http://infocenter.arm.com/help/topic/com.arm.doc.ddi0419d/index.html}
+}
+
+@techreport{SCARV:ARMv7_M:17,
+  title        = {{ARMv7-M}  {A}rchitecture {R}eference {M}anual},
+  number       = {DDI-0403E.c},
+  institution  = {ARM Ltd.},
+  year         = {2017},
+  url          = {http://infocenter.arm.com/help/topic/com.arm.doc.ddi0403e.c/index.html}
+}
+
+@techreport{SCARV:ARMv7_AR:17,
+  title        = {{ARMv7-AR} {A}rchitecture {R}eference {M}anual},
+  number       = {DDI-0406C.d},
+  institution  = {ARM Ltd.},
+  year         = {2012},
+  url          = {http://infocenter.arm.com/help/topic/com.arm.doc.ddi0406c.d/index.html}
+}
+
+@techreport{SCARV:ARMv8_M:17,
+  title        = {{ARMv8-M}  {A}rchitecture {R}eference {M}anual},
+  number       = {DDI-0553A.h},
+  institution  = {ARM Ltd.},
+  year         = {2017},
+  url          = {http://infocenter.arm.com/help/topic/com.arm.doc.ddi0553a.h/index.html}
+}
+
+% -----------------------------------------------------------------------------
+
+@techreport{SCARV:X86:1:12,
+  title        = {Intel {64} and {IA-32} architectures -- Software Developer's Manual},
+  number       = {Volume  1: Basic Architecture},
+  institution  = {Intel Corp.},
+  year         = {2012},
+  url          = {http://software.intel.com/en-us/articles/intel-sdm}
+}
+
+@techreport{SCARV:X86:2a:12,
+  title        = {Intel {64} and {IA-32} architectures -- Software Developer's Manual},
+  number       = {Volume 2A: Instruction Set Reference A-M},
+  institution  = {Intel Corp.},
+  year         = {2012},
+  url          = {http://software.intel.com/en-us/articles/intel-sdm}
+}
+
+@techreport{SCARV:X86:2b:12,
+  title        = {Intel {64} and {IA-32} architectures -- Software Developer's Manual},
+  number       = {Volume 2B: Instruction Set Reference N-Z},
+  institution  = {Intel Corp.},
+  year         = {2012},
+  url          = {http://software.intel.com/en-us/articles/intel-sdm}
+}
+
+@techreport{SCARV:X86:2c:12,
+  title        = {Intel {64} and {IA-32} architectures -- Software Developer's Manual},
+  number       = {Volume 2C: Instruction Set Reference},
+  institution  = {Intel Corp.},
+  year         = {2012},
+  url          = {http://software.intel.com/en-us/articles/intel-sdm}
+}
+
+@techreport{SCARV:X86:3a:12,
+  title        = {Intel {64} and {IA-32} architectures -- Software Developer's Manual},
+  number       = {Volume 3A: System Programming Guide, Part 1},
+  institution  = {Intel Corp.},
+  year         = {2012},
+  url          = {http://software.intel.com/en-us/articles/intel-sdm}
+}
+
+@techreport{SCARV:X86:3b:12,
+  title        = {Intel {64} and {IA-32} architectures -- Software Developer's Manual},
+  number       = {Volume 3B: System Programming Guide, Part 2},
+  institution  = {Intel Corp.},
+  year         = {2012},
+  url          = {http://software.intel.com/en-us/articles/intel-sdm}
+}
+
+@techreport{SCARV:X86:3c:12,
+  title        = {Intel {64} and {IA-32} architectures -- Software Developer's Manual},
+  number       = {Volume 3C: System Programming Guide, Part 3},
+  institution  = {Intel Corp.},
+  year         = {2012},
+  url          = {http://software.intel.com/en-us/articles/intel-sdm}
 }
 
 % =============================================================================
