--- a/docs/specification/appx-related.tex
+++ b/docs/specification/appx-related.tex
@@ -1,12 +1,12 @@
 % =============================================================================
 
-\subsection{Related work}
-\label{sec:bg:related}
-
-% co-processor/accelerator
+% processor/co-processor/accelerator
 \cite{SCARV:Gutmann:00}
+\cite{SCARV:WuWeaAus:01}
 \cite{SCARV:TheSisPne:09}
+\cite{SCARV:MTRGS:99}
 % ISEs
+\cite{SCARV:LeeShiYan:01,SCARV:LSYRR:04}
 \cite{SCARV:BarGioMar:09}
 \cite{SCARV:RegIen:16}
 \cite{SCARV:FazLopOli:18}
