--- a/docs/specification/spec-state.tex
+++ b/docs/specification/spec-state.tex
@@ -1,4 +1,4 @@
-\subsection{\ISE state}
+\subsection{\XCID state}
 \label{sec:spec:state}
 
 % =============================================================================
@@ -15,7 +15,7 @@ Unlike the RISC-V $\GPR$s, the zeroth $\CPR$ is not tied to zero.
 
 The register file addressing is shown in table \ref{tab:state-addr}.
 
-\begin{table}[h!]
+\begin{table}[t]
 \centering
 \begin{tabular}{|l|l l l l|}
 \hline
@@ -95,7 +95,7 @@ read/write CSRs.
 For more information on the differences between feature sets, see
 section \ref{sec:feature-sets}.
 
-\begin{figure}[H]
+\begin{figure}[t]
 \centering
 \begin{bytefield}[bitwidth=1.6em,endianness=big]{32}
 \bitheader{0-31}               \\
@@ -124,7 +124,7 @@ section \ref{sec:feature-sets}.
 \label{fig:csr-mccr}
 \end{figure}
 
-\begin{table}[H]
+\begin{table}[t]
 \centering
 \begin{tabular}{l l l}
 \toprule
